# word_trainer

./: .gitignore  CMakeLists.txt  README.md  config.json  make_windows.sh  words.xlsx
src/: json_reader.cpp  json_reader.hpp  main.cpp  showing.cpp  showing.hpp  table_reader.cpp  table_reader.hpp  word_trainer.cpp  word_trainer.hpp
